--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
-<!--The whole content below can be removed with the new code.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{title}}!!
-  </h1>
+<div class="container">
+  <nav id="" class="navbar navbar-custom">
+    <a href="#" class="navbar-brand"><p class="logo">{{ title }}</p></a>
+  </nav>
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
 </div>
-
-<app-activity-list></app-activity-list>
-
